--- a/views/event.erb
+++ b/views/event.erb
@@ -5,10 +5,13 @@
             <%= @event[:date] %> at <%= @event[:time] %>
         </h2>
         <p>
+            <i class="fas fa-running"></i> 
+            <%= @event[:capacity]/2 %>v<%= @event[:capacity]/2 %>
+        </p>
+        <p>
             <i class="fas fa-map-marker"></i> 
             <%= @event[:location] %>
         </p>
-
         <iframe
             width="600"
             height="450"
@@ -16,7 +19,8 @@
             style="border:0"
             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCtovsQvkIUWlNqtYwXY87gEd4ZSmJEhMw&q=<%= @lat_long %>&zoom=15" allowfullscreen>
         </iframe>
-
+        <br><br>
+        <p><i class="fas fa-hamburger"></i> TBD</p>
         <% for rsvp in @rsvps %>
             <% user = @users_table.where(:id => rsvp[:user_id]).to_a[0] %>
             <div class="media">
@@ -32,11 +36,11 @@
             </div>
         <% end %>
         <p class="mt-5">
-            <a href="/events/<%= @event[:id] %>/rsvps/new" class="btn btn-primary">RSVP now!</a>
+            <a href="/events/<%= @event[:id] %>/rsvps/new" class="btn btn-primary">RSVP</a>
         </p>
     </div>
     <div class="col-sm-3">
-        <h3>How many guests so far?</h3>
+        <h3>Attendees</h3>
         <p><%= @count %></p>
     </div>
 </div>
