--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,6 +22,48 @@
   </head>
   <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <a class="navbar-brand">
+            <i class="fas fa-futbol"></i> Pickup Soccer Miami
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <% if @current_user %>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                </ul>
+            </div>
+            <ul class="navbar-nav ml-auto">
+                <li class="navbar-text">
+                    <i class="fas fa-user"></i> Welcome, <%= @current_user[:name] %>!
+                </li>
+                <li class="nav-item">
+                    <a href="/logout" class="nav-link">Logout</a>
+                </li>
+            </ul>
+        <% else %>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/new">Sign Up</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logins/new">Sign In</a>
+                </li>
+            </ul>
+        </div>
+        <% end %>
+    </nav>
+
+    <br>
+
     <div class="container mt-5">
       <%= yield %>
     </div>
