--- a/views/events.erb
+++ b/views/events.erb
@@ -1,5 +1,12 @@
 <h1>Upcoming Games</h1>
 <br>
 <% for event in @events %>
-    <p><a href="/events/<%= event[:id] %>"><%= event[:date] %> - <%= event[:location] %> (<%= event[:capacity]/2 %>v<%= event[:capacity]/2 %>)</a></p>
+    <p>
+        <a href="/events/<%= event[:id] %>">
+            <%= event[:date] %> - <%= event[:location] %>
+            <% if event[:bbq] %>
+                <i class="fas fa-hamburger"></i>
+            <% end %>
+        </a>
+    </p>
 <% end %>
