--- a/views/layout.erb
+++ b/views/layout.erb
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/event/new">Create Game</a>
+                    </li>
                 </ul>
             </div>
             <ul class="navbar-nav ml-auto">
