--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="form-group">
     <label>Phone</label>
-    <input type="phone" class="form-control" placeholder="0000000000" name="phone">
+    <input type="phone" class="form-control" placeholder="##########" name="phone">
   </div>
   <div class="form-group">
     <label>Password</label>
