--- a/views/new_rsvp.erb
+++ b/views/new_rsvp.erb
@@ -4,24 +4,24 @@
   <div class="form-group">
     <label>Are you going to the game?</label>
     <select class="form-control" name="going">
-      <option value="1">Yes</option>
-      <option value="0">No</option>
+      <option value=true>Yes</option>
+      <option value=false>No</option>
     </select>
   </div>
   <% if @event[:bbq] then %>
     <div class="form-group">
         <label>Are you going to the after game BBQ?</label>
         <select class="form-control" name="going_bbq">
-            <option value="1">Yes</option>
-            <option value="0">No</option>
+            <option value=true>Yes</option>
+            <option value=false>No</option>
         </select>
     </div>   
     <% if @count_bbq_host == 0 then %>
         <div class="form-group">
             <label>Do you want to be responsible for the BBQ?</label>
             <select class="form-control" name="bbq_host">
-                <option value="1">Yes</option>
-                <option value="0">No</option>
+                <option value=true>Yes</option>
+                <option value=false>No</option>
             </select>
         </div>      
     <% end %>
