--- a/views/new_event.erb
+++ b/views/new_event.erb
@@ -24,8 +24,8 @@
   <div class="form-group">
     <label>BBQ</label>
     <select class="form-control" name="bbq">
-        <option value="1">Yes</option>
-        <option value="0">No</option>
+        <option value=true>Yes</option>
+        <option value=false>No</option>
     </select>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
