--- a/views/new_event.erb
+++ b/views/new_event.erb
@@ -11,7 +11,11 @@
   </div>
   <div class="form-group">
     <label>Location</label>
-    <input type="location" class="form-control" placeholder="address or name of the venue" name="location">
+    <input type="location" class="form-control" placeholder="name of the venue" name="location">
+  </div>
+  <div class="form-group">
+    <label>Address</label>
+    <input type="address" class="form-control" placeholder="address, city, state zipcode" name="address">
   </div>
   <div class="form-group">
     <label>Capacity</label>
