--- a/views/new_rsvp.erb
+++ b/views/new_rsvp.erb
@@ -16,7 +16,7 @@
             <option value=false>No</option>
         </select>
     </div>   
-    <% if @count_bbq_host == 0 then %>
+    <% if @count_bbq_host == 0 %>
         <div class="form-group">
             <label>Do you want to be responsible for the BBQ?</label>
             <select class="form-control" name="bbq_host">
